--- a/css/resume.css
+++ b/css/resume.css
@@ -6,7 +6,7 @@
 body {
   font-family: 'Open Sans', serif;
   padding-top: 54px;
-  color: #ffffff;
+  color: #ededed;
   background-color: #577B8D; }
 
 @media (min-width: 992px) {
